[package]
name = "webrtc-rust-native-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
env_logger = "0.11.3"
log = "0.4.22"
tokio = { version = "1.38.0", features = ["full"] }
webrtc = "0.11.0"

[[bin]]
name = "webrtc-rust-native-gui"
path = "src/bin/webrtc-rust-native-gui.rs"

[[bin]]
name = "stun-server"
path = "src/bin/stun-server.rs"
